--- a/styles/Utilities.css
+++ b/styles/Utilities.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,8 @@
 }
 
 body {
-  font-family: "lato", sans-serif;
+  font-family: 'Varela Round', sans-serif;
+
   line-height: 1.6;
   color: #333;
   overflow-x:hidden;
